Implementado genero
